[package]
name = "fizzbuzz"
version = "2.0.0"
edition = "2021"

[lib]
name = "fizzbuzz"
path = "src/lib.rs"
crate-type = ["rlib"]  # cdylib required for python import, rlib required for rust tests.

[dev-dependencies]
googletest = "0.11.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_fizzbuzz"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
