[package]
name = "fizzbuzzo3"
version = "0.1.0"
edition = "2021"

[lib]
name = "fizzbuzzo3"
path = "src/lib.rs"
crate-type = ["cdylib"]  # cdylib required for python import, rlib required for rust tests.

[dependencies]
pyo3 = { version = "0.21.0-beta.0" }
fizzbuzz = { path = "../fizzbuzz" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
