[package]
name = "fizzbuzzo3"
version = "2.1.0" # Tracks python version
edition = "2021"

[lib]
name = "fizzbuzzo3"
path = "src/lib.rs"
crate-type = ["cdylib"]  # cdylib required for python import, rlib required for rust tests.

[dependencies]
fizzbuzz = { path = "../fizzbuzz" }
pyo3 = "0.27.2"
rayon = "1.10.0"

[dev-dependencies]
pyo3-testing = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
